# testDM

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: main.py
app/api/routes/: health.py  registration.py
app/api/schemas/: registration.py
app/core/: Logging.py  Settings.py  lifespan.py
app/domain/: exceptions.py
app/domain/models/: activation_code.py  user.py
app/domain/ports/: activation_code_repository.py  mailer.py  user_repository.py
app/domain/services/: code_generator.py  registration_service.py  security.py
app/infrastructure/db/: health.py  migrate.py
app/infrastructure/db/migrations/: 001_init.sql  002_add_attempts_to_activation_codes.sql
app/infrastructure/mailer/: console_mailer.py
app/infrastructure/repositories/: activation_code_repository.py  user_repository.py
app/utils/: security.py
tests/api/: test_health.py  test_lifespan.py  test_registrtation.py  utils.py
tests/core/: test_lifespan.py
tests/domain/: test_code_generator.py  test_registration_service.py
tests/domain/models/: test_activation_code.py  test_user.py
tests/infrastructure/db/: test_activation_code_repository.py  test_migrations.py  test_user_repository.py
tests/mock/: fakepool.py
tests/mock/db/: db.py  fakepool.py
tests/mock/domain/: activation_code_repo.py  mailer.py  user_repository.py
